WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55014
Per-page minimum DOMTimer interval broken for repeating timers
https://bugs.webkit.org/show_bug.cgi?id=55014
Summary
Per-page minimum DOMTimer interval broken for repeating timers
Kenneth Russell
Reported
2011-02-22 19:20:59 PST
The logic added in
https://bugs.webkit.org/show_bug.cgi?id=54312
is broken for the case of repeating timers, i.e., those set via setInterval() rather than setTimeout(). The error occurs when the minimum interval is decreased and the timer's repeat interval has already been clamped to the larger value. The current code fails to decrease the repeat interval, leaving the timer running at the slower rate.
Attachments
Patch
(7.48 KB, patch)
2011-02-22 19:42 PST
,
Kenneth Russell
fishd
: review+
kbr
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kenneth Russell
Comment 1
2011-02-22 19:42:55 PST
Created
attachment 83433
[details]
Patch
Kenneth Russell
Comment 2
2011-02-23 10:00:29 PST
Committed
r79455
: <
http://trac.webkit.org/changeset/79455
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug