2011-02-22  Kenneth Russell  <kbr@google.com>

Reviewed by Darin Fisher.

        Per-page minimum DOMTimer interval broken for repeating timers
        https://bugs.webkit.org/show_bug.cgi?id=55014

        When the minimum timer interval is adjusted, if the timer is
        repeating, cause its repeat interval to be set to its original
        timeout clamped to the new minimum interval.

        Tests: fast/dom/timer-increase-min-interval-repeating.html
               fast/dom/timer-increase-then-decrease-min-interval-repeating.html

        * page/DOMTimer.cpp:
        (WebCore::DOMTimer::adjustMinimumTimerInterval):
2011-02-23  Kenneth Russell  <kbr@google.com>

        Reviewed by Darin Fisher.

        Per-page minimum DOMTimer interval broken for repeating timers
        https://bugs.webkit.org/show_bug.cgi?id=55014

        Add tests using setInterval rather than setTimeout.
        timer-increase-then-decrease-min-interval-repeating.html catches
        the bug.

        * fast/dom/timer-increase-min-interval-repeating-expected.txt: Added.
        * fast/dom/timer-increase-min-interval-repeating.html: Added.
        * fast/dom/timer-increase-then-decrease-min-interval-repeating-expected.txt: Added.
        * fast/dom/timer-increase-then-decrease-min-interval-repeating.html: Added.
        * platform/mac-wk2/Skipped:


Canonical link: https://commits.webkit.org/69375@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79455 268f45cc-cd09-0410-ab3c-d52691b4dbfc